# geometry-processing

./: README.md
assignment1/: CMakeLists.txt  README.md
assignment1/src/: gui_utils.cpp  gui_utils.h  main.cpp
assignment2/: CMakeLists.txt  README.md
assignment2/cmake/: FindLIBIGL.cmake
assignment2/src/: main.cpp
assignment3/: CMakeLists.txt  README.md
assignment3/src/: main.cpp
assignment4/: .gitignore  CMakeLists.txt  README.md
assignment4/data/: bar.off  bumpy_plane.off  cactus.off  cylinder.off  hand.off  woody-hi.off  woody-lo.off
assignment4/src/: Colors.cpp  Colors.h  Lasso.cpp  Lasso.h  main.cpp
assignment5/: CMakeLists.txt  README.md
assignment5/src/: gui_utils.cpp  gui_utils.h  main.cpp  test_rosenbrock.cpp
assignment5/src/femLib/: CMakeLists.txt  Element.h  FEMElement.h  FEMElementAnalytic.h  FEMElementAutoDiff.h  FEMElementFD.h  FixedPointElement.h  SimulationMesh.cpp  SimulationMesh.h  Spring.h  TotalEnergyFunction.cpp  TotalEnergyFunction.h
assignment5/src/optLib/: CMakeLists.txt  GradientDescentFunctionMinimizer.h  MathHelper.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  RosenbrockFunction.h
